force-app/main/default/objects/Case/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <label>Actual Result</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>