force-app/main/default/objects/Case/fields/App_Version__c.field-meta.xml
<CustomField>
    <fullName>App_Version__c</fullName>
    <label>App Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.9.0</fullName>
            </value>
            <value>
                <fullName>1.8.0</fullName>
                <default>true</default>
                <label>1.8.0</label>
            </value>
            <value>
                <fullName>1.7.0</fullName>
            </value>
            <value>
                <fullName>1.6.0</fullName>
            </value>
            <value>
                <fullName>1.5.6</fullName>
            </value>
            <value>
                <fullName>1.5.5</fullName>
            </value>
            <value>
                <fullName>1.5.4</fullName>
            </value>
            <value>
                <fullName>1.5.3</fullName>
            </value>
            <value>
                <fullName>1.5.2</fullName>
            </value>
            <value>
                <fullName>1.5.1</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>1.4.x</fullName>
            </value>
            <value>
                <fullName>1.2.x</fullName>
            </value>
            <value>
                <fullName>1.1.x</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0.99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>