force-app/main/default/objects/Case/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>