force-app/main/default/objects/Case/fields/Deletion_Request__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Request__c</fullName>
    <formula>Account.Deletion_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deletion Request</label>
    <type>Checkbox</type>
</CustomField>