force-app/main/default/objects/Case/fields/Email_Honorific__c.field-meta.xml
<CustomField>
    <fullName>Email_Honorific__c</fullName>
    <formula>IF(
ISNULL(AccountId) , &apos;Sehr geehrte Kundin, sehr geehrter Kunde&apos;,
IF(ISPICKVAL(Account.PersonContact.Gender__c , &apos;Female&apos;) ,&apos;Sehr geehrte &apos;,&apos;Sehr geehrter&apos;)
)
+ &apos; &apos; +
CASE(Account.Salutation,
&apos;Ms&apos;, &apos;Frau&apos;,
&apos;Ms.&apos;, &apos;Frau&apos;,
&apos;Mrs.&apos;, &apos;Frau&apos;,
&apos;Mrs&apos;, &apos;Frau&apos;,
&apos;Mr&apos;, &apos;Herr&apos;,
&apos;Mr.&apos;, &apos;Herr&apos;,
&apos;Dr.&apos;, &apos;Doktor&apos;,
&apos;Dr&apos;, &apos;Doktor&apos;,
&apos;Prof&apos;, &apos;Professor&apos;,
&apos;Prof.&apos;, &apos;Professor&apos;,
&apos;&apos;)
+ &apos; &apos; +
Account.FirstName
+ &apos; &apos; +
Account.MiddleName
+ &apos; &apos; +
Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Honorific</label>
    <type>Text</type>
</CustomField>