force-app/main/default/objects/Case/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>