force-app/main/default/objects/Case/fields/Occurrence_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Of_Issue__c</fullName>
    <label>Occurrence Of Issue</label>
    <type>DateTime</type>
</CustomField>