force-app/main/default/objects/Case/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <label>OS Version</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Phone_OS__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iOS 15</fullName>
            </value>
            <value>
                <fullName>iOS 14</fullName>
            </value>
            <value>
                <fullName>iOS 14.2.x</fullName>
            </value>
            <value>
                <fullName>iOS 14.3.x</fullName>
            </value>
            <value>
                <fullName>iOS 14.4.x</fullName>
            </value>
            <value>
                <fullName>iOS 13</fullName>
            </value>
            <value>
                <fullName>Android 11</fullName>
            </value>
            <value>
                <fullName>Android 10</fullName>
            </value>
            <value>
                <fullName>Android 9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>