force-app/main/default/objects/Case/fields/Phone_Model__c.field-meta.xml
<CustomField>
    <fullName>Phone_Model__c</fullName>
    <label>Phone Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>