force-app/main/default/objects/Case/fields/Phone_OS__c.field-meta.xml
<CustomField>
    <fullName>Phone_OS__c</fullName>
    <label>Phone OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>