force-app/main/default/objects/Case/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <label>Reported</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solaribank</fullName>
            </value>
            <value>
                <fullName>Digibank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>