force-app/main/default/objects/Case/fields/Source_Url__c.field-meta.xml
<CustomField>
    <fullName>Source_Url__c</fullName>
    <label>Source Url</label>
    <type>Url</type>
</CustomField>