force-app/main/default/objects/Case/fields/Submitted_FLC_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_FLC_Date__c</fullName>
    <label>Submitted FLC Date</label>
    <type>DateTime</type>
</CustomField>