force-app/main/default/objects/Case/fields/Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Thread_Id__c</fullName>
    <formula>&quot;[ ref:_&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp;
IF(RIGHT($Organization.Id,1)=&quot;0&quot;, &quot;0&quot;, &quot;&quot;) &amp; 
&quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref ]&quot;</formula>
    <label>Thread Id</label>
    <type>Text</type>
</CustomField>