force-app/main/default/objects/Case/recordTypes/Banking_Case.recordType-meta.xml
<RecordType>
    <fullName>Banking_Case</fullName>
    <active>true</active>
    <businessProcess>Banking Case</businessProcess>
    <label>Banking Case</label>
</RecordType>