force-app/main/default/objects/Case/recordTypes/E_V_Konto_App_Case.recordType-meta.xml
<RecordType>
    <fullName>E_V_Konto_App_Case</fullName>
    <active>true</active>
    <businessProcess>E V Konto Case</businessProcess>
    <label>EV Konto App Case</label>
</RecordType>