force-app/main/default/objects/Case/recordTypes/General_Questions.recordType-meta.xml
<RecordType>
    <fullName>General_Questions</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>General Questions</label>
</RecordType>