force-app/main/default/objects/Case/recordTypes/Investment_Case.recordType-meta.xml
<RecordType>
    <fullName>Investment_Case</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Investment Case</label>
</RecordType>