force-app/main/default/objects/Case/validationRules/Case_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Owner</fullName>
    <active>true</active>
    <description>Current User must be case owner to edit case</description>
    <errorConditionFormula>AND(
  NOT(ISNEW())  ,
IF(OwnerId != $User.Id ,true , false),
NOT(CONTAINS($Label.Users_Exclusion,$User.Username))

)</errorConditionFormula>
    <errorMessage>Accept case before editing</errorMessage>
</ValidationRule>