force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>statuspage,globalratings,aoneapps</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>solarisbank,microsoft,salesforce,google</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>support@weisshausinvestment.com</value>
    </filters>
    <label>All Cases</label>
</ListView>