force-app/main/default/objects/Case/listViews/All_Information_Cases.listView-meta.xml
<ListView>
    <fullName>All_Information_Cases</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>contains</operation>
        <value>statuspage,globalratings,aoneapps</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>contains</operation>
        <value>solarisbank,microsoft,salesforce,google</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>equals</operation>
        <value>support@weisshausinvestment.com</value>
    </filters>
    <label>All Information Cases</label>
    <language>en_US</language>
</ListView>