force-app/main/default/objects/Case/listViews/All_Open_Banking_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Banking_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.EMAIL</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>statuspage,globalratings,aoneapps</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notContain</operation>
        <value>solarisbank,microsoft,salesforce,google</value>
    </filters>
    <filters>
        <field>CASES.EMAIL</field>
        <operation>notEqual</operation>
        <value>support@weisshausinvestment.com</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Banking_Case</value>
    </filters>
    <label>All Open Banking Cases</label>
</ListView>