force-app/main/default/objects/Case/listViews/Customer_Support_Email_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Support_Email_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Support Email</label>
    <queue>Customer_Support_Email</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>