force-app/main/default/objects/Case/listViews/Partner_Management_Case.listView-meta.xml
<ListView>
    <fullName>Partner_Management_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Management</label>
    <queue>Partner_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>