force-app/main/default/objects/Case/listViews/Partner_Management_Cases.listView-meta.xml
<ListView>
    <fullName>Partner_Management_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Partner_Management</value>
    </filters>
    <label>Partner Management Cases</label>
</ListView>