force-app/main/default/objects/Case/listViews/Web_Support_Case.listView-meta.xml
<ListView>
    <fullName>Web_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Web Support</label>
    <queue>Web_Support</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>